--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="refresh" content="0; URL='fivem://connect/82.18.68.243:30120'" />
+  <meta http-equiv="refresh" content="0; URL='fivem://connect/82.18.68.243:30120'" />
 <title> Join CJRP</title>
 	<link rel="Icon" type="Icon" href="Icon.png"</link>
-</a>
-<div>
+</head>
+<body>
+</body>
 </html>
+
